--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-lightbox": "^0.8.1",
+    "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.11.1",
     "react-native-picker-select": "^9.0.0",
