--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.6",
+    "@react-native-community/geolocation": "^3.1.0",
     "@react-native-community/hooks": "^3.0.0",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -22,6 +23,7 @@
     "react-native": "0.72.6",
     "react-native-date-picker": "^4.3.3",
     "react-native-elements": "^3.4.3",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-lightbox": "^0.8.1",
     "react-native-modal": "^13.0.1",
