--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "react-native-elements": "^3.4.3",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-image-crop-picker": "^0.40.2",
+    "react-native-image-picker": "^7.0.3",
     "react-native-lightbox": "^0.8.1",
+    "react-native-maps": "^1.8.0",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.11.1",
