--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.6",
+    "@react-native-community/checkbox": "^0.5.16",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-community/geolocation": "^3.1.0",
     "@react-native-community/hooks": "^3.0.0",
     "@react-native-community/viewpager": "^5.0.11",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
@@ -21,7 +24,9 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-check-box": "^2.1.7",
     "react-native-date-picker": "^4.3.3",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^3.4.3",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.13.4",
@@ -36,6 +41,7 @@
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-toast-message": "^2.1.7",
     "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
