--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-picker-select": "^9.0.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.1.7",
     "react-native-vector-icons": "^10.0.2"
