--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.6.2",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-check-box": "^2.1.7",
     "react-native-date-picker": "^4.3.3",
     "react-native-datepicker": "^1.7.2",
