--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.1.7",
-    "react-native-vector-icons": "^10.0.2"
+    "react-native-vector-icons": "^10.0.2",
+    "watchman": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
